Fix to CURRIKI-2554 - adding more spacing - not seeing the title bar cutoff issue
svn@13802

--- a/web/src/main/webapp/skins/curriki8/style2.css
+++ b/web/src/main/webapp/skins/curriki8/style2.css
@@ -1004,6 +1004,10 @@ input#search-termPanel-resource-terms, input#search-termPanel-group-terms, input
 	width:75%;
 }
 
+#nominateResourceForm, #nominateResourceForm textarea {
+margin:10px 0;
+}
+
 /*** ACE FORM STYLE OVERRIDES ***/
 
 body.p-CreateResources-ACELessonPlan .x-grid3-header {
